--- a/sitio_transportes/.env
+++ b/sitio_transportes/.env
@@ -1,4 +1,10 @@
+MYSQL_HOST=localhost
+MYSQL_DB_NAME= ejercicio
+MYSQL_USER= root
+MYSQL_PASSWORD= pablo
+
 SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USER=3c752e75ded206
 SMTP_PASS=e231e06885c9d1
+
