--- a/sitio_transportes/package.json
+++ b/sitio_transportes/package.json
@@ -13,7 +13,10 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "util": "^0.12.5"
   }
 }
