trabajo modulo 4 unidad 4

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 Modulo 4/Unidad_1/node_modules/
 Modulo 4/Unidad_2/node_modules/
+Modulo 4/Unidad_4/node_modules/
 sitio_transportes/node_modules/
 
